# metis

./: pyproject.toml
docs/: CHANGELOG.md  repository-memory.md
src/metis/: configuration.py  metis.yaml  version.py
src/metis/cli/: commands.py
src/metis/memory/: __init__.py  base.py  fingerprints.py  registry.py  schemas.py  service.py  sqlite_records.py  sqlite_store.py
tests/: test_configuration.py  test_memory_backend.py  test_memory_registry.py
