[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=82.0.1" ]

[project]
name = "metis"
version = "1.5.0"
description = "Metis is a command line tool for performing security code reviews using LLMs"
readme = "README.md"
keywords = [ "code-review", "llm", "security" ]
license = { file = "LICENSE.md" }
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "chromadb>=1.5.9",
  "langchain==1.3.4",
  "langchain-core==1.4.4",
  "langchain-openai==1.2.2",
  "langgraph==1.2.4",
  "langsmith==0.8.18",
  "llama-index>=0.14.22",
  "llama-index-vector-stores-chroma>=0.5.5",
  "pathspec>=1.1.1",
  "prompt-toolkit>=3.0.52",
  "pydantic>=2.13.4",
  "pyyaml>=6.0.3",
  "rich>=15.0.0",
  "tree-sitter==0.25.2",
  "tree-sitter-language-pack==1.8.1",
  "unidiff>=0.7.5",
]
optional-dependencies.all-providers = [
  "metis[anthropic,bedrock,bedrock-mantle,gemini]",
]
optional-dependencies.anthropic = [
  "langchain-anthropic>=1.4.3",
  "llama-index-llms-langchain>=0.8.0",
]
optional-dependencies.azure = []
optional-dependencies.bedrock = [
  "boto3>=1.34.0",
  "langchain-aws>=1.0.0",
]
optional-dependencies.bedrock-mantle = [
  "anthropic[aws]>=0.74.0",
  "boto3>=1.34.0",
  "langchain-anthropic>=1.4.3",
  "llama-index-llms-langchain>=0.8.0",
]
optional-dependencies.dev = [
  "metis[all-providers]",
  "metis[lint]",
  "metis[test]",
]
optional-dependencies.gemini = [
  "langchain-google-genai>=4.0.0",
]
optional-dependencies.lint = [
  "bandit>=1.9.4",
  "mypy>=2.1.0",
  "pre-commit>=4.6.0",
  "ruff>=0.15.15",
]
optional-dependencies.postgres = [
  "llama-index-vector-stores-postgres>=0.8.1",
]
optional-dependencies.test = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
]
scripts.metis = "metis.cli.entry:main"
entry-points."metis.providers"."anthropic.chat" = "metis.providers.anthropic:AnthropicProvider"
entry-points."metis.providers"."azure_openai.chat" = "metis.providers.azure_openai:AzureOpenAIProvider"
entry-points."metis.providers"."azure_openai.embedding" = "metis.providers.azure_openai:AzureOpenAIEmbeddingProvider"
entry-points."metis.providers"."bedrock.chat" = "metis.providers.bedrock:BedrockProvider"
entry-points."metis.providers"."bedrock.embedding" = "metis.providers.bedrock:BedrockEmbeddingProvider"
entry-points."metis.providers"."bedrock_mantle.chat" = "metis.providers.bedrock_mantle:BedrockMantleProvider"
entry-points."metis.providers"."gemini.chat" = "metis.providers.gemini:GeminiProvider"
entry-points."metis.providers"."llamacpp.chat" = "metis.providers.llamacpp:LlamaCppProvider"
entry-points."metis.providers"."llamacpp.embedding" = "metis.providers.llamacpp:LlamaCppEmbeddingProvider"
entry-points."metis.providers"."ollama.chat" = "metis.providers.ollama:OllamaProvider"
entry-points."metis.providers"."ollama.embedding" = "metis.providers.ollama:OllamaEmbeddingProvider"
entry-points."metis.providers"."openai.chat" = "metis.providers.openai:OpenAIProvider"
entry-points."metis.providers"."openai.embedding" = "metis.providers.openai:OpenAIEmbeddingProvider"
entry-points."metis.providers"."vllm.chat" = "metis.providers.vllm:VLLMProvider"
entry-points."metis.providers"."vllm.embedding" = "metis.providers.vllm:VLLMEmbeddingProvider"

[tool.setuptools]
include-package-data = true
package-data."metis.cli" = [ "report_template.html" ]
package-data."metis.engine.tools.contracts" = [ "*.md" ]
package-data."metis.engine.tools.manifests" = [ "*.yaml" ]
package-data."metis.plugins" = [
  "config/*.yaml",
  "languages/*.yaml",
  "manifests/*.yaml",
  "profiles/*.yaml",
]
package-data."metis.plugins.config" = [ "*.yaml" ]
package-data."metis.plugins.languages" = [ "*.yaml" ]
package-data."metis.plugins.manifests" = [ "*.yaml" ]
package-data."metis.plugins.profiles" = [ "*.yaml" ]
package-data."metis.schemas" = [ "*.json" ]
package-data.metis = [ "metis.yaml" ]

[tool.ruff]
lint.isort.force-single-line = true

[tool.pyproject-fmt]
keep_full_version = true
